# stm32-eth

src/: CMakeLists.txt
src/spi/: CMakeLists.txt
src/w5100/: CMakeLists.txt
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
